# subtitler

./: LICENSE  README.md  pyproject.toml
src/subtitler/: __init__.py  __main__.py  audio.py  config.py  reference.py  transcribe.py  translate.py  ui.py
